--- a/sub2.html
+++ b/sub2.html
@@ -231,7 +231,7 @@
       <div class="content4_text1">
         <p>
           <br>곰손카페에 방문해보세요!
-          <br>보들보들한 털을 가진 큼지막한 손을 가진
+          <br>보들보들한 털과 큼지막한 손을 가진
           <br>곰돌이가 당신이 주문한 음료를 정성을 함께 담아서 만들어준답니다.
           <br>여러가지 이벤트들도 같이 함께 하고 있으니 참여해보세요!
         </p>
